# Chutes-MCP

./: .env.example  .gitignore  config.yaml  fastmcp.json  pyproject.toml  start.py
docs/: image_editing_api.md  image_generation_api.md  llm_api.md  music_generation_api.md  video_generation_api.md
src/: __init__.py  app.py  config.py  main.py  mcp_instance.py
src/tools/: image_tool.py  llm_tool.py  music_tool.py  system_check_tool.py  video_tool.py
src/utils/: imagekit_uploader.py  log.py  multimodal_llm.py
